<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_wallet"
        android:title="Wallet"
        android:icon="@drawable/wallet"
        app:showAsAction="always" />

</menu>