<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_store"
        android:title="Bank"
        android:icon="@drawable/moneybag"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_market"
        android:title="Market"
        android:icon="@drawable/shop"
        app:showAsAction="always" />
</menu>